--- a/src/view/index.html
+++ b/src/view/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="col-6 m-auto mt-4">
-    <form class="form" action="http://127.0.0.1:3000/api/doctors/new" method="post" enctype="multipart/form-data">
+    <form class="form" action="http://127.0.0.1:3000/api/practitioners/new" method="post" enctype="multipart/form-data">
         <input class="mb-3 form-control" type="file" name="file">
         <input class="mb-3 btn btn-info" type="submit" value="telecharger">
     </form>
