--- a/client-ui/src/app/app.component.html
+++ b/client-ui/src/app/app.component.html
@@ -1,8 +1,5 @@
 <main >
-  <header class="brand-name wrapper">
-      <img class="brand-logo" ngSrc="assets/preview.jpg" alt="logo" aria-hidden="true" height="1300" width="1300">
-      <mat-nav-list></mat-nav-list>
-  </header>
+  <app-header></app-header>
   <section class="content wrapper">
     <router-outlet></router-outlet>
   </section>
