--- a/client-ui/src/app/list/list.component.html
+++ b/client-ui/src/app/list/list.component.html
@@ -1,1 +1,9 @@
-<p>list works!</p>
+<mat-card >
+  <mat-card-header (click)="select(1)">
+    <mat-card-title>Ceci est un docter</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab amet architecto distinctio eos exercitationem modi praesentium quasi quis repellat voluptatem? Ab accusamus autem nemo nesciunt officiis quo ratione, repellat unde!</p>
+  </mat-card-content>
+</mat-card>
+
