--- a/client-ui/src/app/home/home.component.html
+++ b/client-ui/src/app/home/home.component.html
@@ -1,9 +1,2 @@
-<div>
-  <form class="form-wrapper">
-    <mat-form-field appearance="outline">
-      <input matInput matNativeControl>
-    </mat-form-field>
-     <button class="mat-primary" type="button" mat-stroked-button>Rechercher</button>
-  </form>
-</div>
+<app-search-bar ></app-search-bar>
 
