--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -1,5 +1,5 @@
 <app-header (toggleMenuChange)="onToggleMenuClicked($event)"/>
 <main>
-  <app-sidebar [opened]="opened" />
+  <app-sidebar [isOpened]="opened" />
 </main>
 <app-footer />
