--- a/client/src/app/admin/shared/components/sidebar/sidebar.component.html
+++ b/client/src/app/admin/shared/components/sidebar/sidebar.component.html
@@ -1,14 +1,18 @@
 <mat-sidenav-container class="sidenav-container" [hasBackdrop]="false">
   <mat-sidenav #sidenav mode="push" >
-    <section>
-      <div class="example-label">Flat</div>
-
-    </section>
+    <mat-nav-list>
+      <mat-list role="list">
+        <mat-list-item role="listitem">
+          <a routerLink="/admin/practitioners">Praticiens</a>
+        </mat-list-item>
+        <mat-list-item role="listitem"><a>Abonnement</a></mat-list-item>
+        <mat-list-item role="listitem"><a>Rendez-vous</a></mat-list-item>
+      </mat-list>
+    </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
-
 </mat-sidenav-container>
 
 
