--- a/client/src/app/admin/features/dashboard/dashboard.component.html
+++ b/client/src/app/admin/features/dashboard/dashboard.component.html
@@ -1,1 +1,16 @@
-<p>dashboard works!</p>
+<section>
+  <div>
+    <mat-card appearance="outlined">
+      <mat-card-header>
+        <mat-card-title>Recents new practitioners</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <mat-list>
+          @for (practitioner of practitioners; track practitioner.id){
+            <mat-list-item>{{ practitioner.firstname }}</mat-list-item>
+          }
+        </mat-list>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</section>
