--- a/client/src/app/admin/features/dashboard/dashboard.component.html
+++ b/client/src/app/admin/features/dashboard/dashboard.component.html
@@ -3,6 +3,7 @@
     <mat-card appearance="outlined">
       <mat-card-header>
         <mat-card-title>Recents new practitioners</mat-card-title>
+        <button mat-flat-button color="primary" (click)="createPractitioner()">Create</button>
       </mat-card-header>
       <mat-card-content>
         <mat-list>
@@ -10,6 +11,7 @@
             <mat-list-item>{{ practitioner.firstname }}</mat-list-item>
           }
         </mat-list>
+
       </mat-card-content>
     </mat-card>
   </div>
