--- a/client/src/app/admin/shared/components/sidebar/sidebar.component.html
+++ b/client/src/app/admin/shared/components/sidebar/sidebar.component.html
@@ -5,8 +5,15 @@
         <mat-list-item role="listitem">
           <a routerLink="/admin/practitioners">Praticiens</a>
         </mat-list-item>
-        <mat-list-item role="listitem"><a>Abonnement</a></mat-list-item>
-        <mat-list-item role="listitem"><a>Rendez-vous</a></mat-list-item>
+        <mat-list-item role="listitem">
+          <a routerLink="/admin/offices">Office</a>
+        </mat-list-item>
+        <mat-list-item role="listitem">
+          <a routerLink="/admin/specialities">Specialities</a>
+        </mat-list-item>
+        <mat-list-item role="listitem">
+          <a routerLink="/admin/languages">Languages</a>
+        </mat-list-item>
       </mat-list>
     </mat-nav-list>
   </mat-sidenav>
