--- a/client/src/app/admin/features/office/office.component.html
+++ b/client/src/app/admin/features/office/office.component.html
@@ -37,7 +37,7 @@
 
   <div class="group-button">
     @if(isEditContext) {
-      <button (click)="onRemove()" mat-stroked-button type="button" color="warn">Remove</button>
+      <button (click)="onRemove()" mat-flat-button type="button" color="warn">Remove</button>
     }
 
     <button (click)="onReset()" mat-stroked-button type="button" class="">Cancel</button>
