--- a/client/src/app/admin/features/language/language.component.html
+++ b/client/src/app/admin/features/language/language.component.html
@@ -1,15 +1,15 @@
-<form class="create-form" [formGroup]="baseForm.modelForm" (ngSubmit)="onSubmit($event)">
+<form class="create-form" [formGroup]="formService.formGroup" (ngSubmit)="onSubmit($event)">
   <mat-form-field class="field-full">
     <mat-label>Name</mat-label>
     <input matInput formControlName="name"/>
-    @if(baseForm.isValidField('name')) {
+    @if(formService.isValidField('name')) {
       <mat-error>This field is invalid</mat-error>
     }
   </mat-form-field>
   <mat-form-field class="field-full">
     <mat-label>Street</mat-label>
     <input matInput formControlName="code"/>
-    @if(baseForm.isValidField('code')) {
+    @if(formService.isValidField('code')) {
       <mat-error>This field is invalid</mat-error>
     }
   </mat-form-field>
@@ -20,7 +20,7 @@
     }
 
     <button (click)="onReset()" mat-stroked-button type="button" class="">Cancel</button>
-    <button mat-flat-button type="submit" color="primary" [disabled]="!baseForm.modelForm.valid">
+    <button mat-flat-button type="submit" color="primary" [disabled]="!formService.formGroup.valid">
       @if(isEditContext) {
         Edit
       } @else {
