--- a/client/src/app/admin/features/speciality/speciality.component.html
+++ b/client/src/app/admin/features/speciality/speciality.component.html
@@ -1,8 +1,15 @@
-<form class="create-form" [formGroup]="baseForm.modelForm" (ngSubmit)="onSubmit($event)">
+<form class="create-form" [formGroup]="formService.formGroup" (ngSubmit)="onSubmit($event)">
   <mat-form-field class="field-full">
     <mat-label>Name</mat-label>
     <input matInput formControlName="name"/>
-    @if(baseForm.isValidField('name')) {
+    @if(formService.isValidField('name')) {
+      <mat-error>This field is invalid</mat-error>
+    }
+  </mat-form-field>
+  <mat-form-field class="field-full">
+    <mat-label>Name</mat-label>
+    <input matInput formControlName="name"/>
+    @if(formService.isValidField('name')) {
       <mat-error>This field is invalid</mat-error>
     }
   </mat-form-field>
@@ -13,7 +20,7 @@
     }
 
     <button (click)="onReset()" mat-stroked-button type="button" class="">Cancel</button>
-    <button mat-flat-button type="submit" color="primary"  [disabled]="!baseForm.modelForm.valid">
+    <button mat-flat-button type="submit" color="primary"  [disabled]="!formService.formGroup.valid">
       @if(isEditContext) {
         Edit
       } @else {
