--- a/client/src/app/admin/features/speciality/speciality.component.html
+++ b/client/src/app/admin/features/speciality/speciality.component.html
@@ -1,1 +1,25 @@
-<p>speciality works!</p>
+<form class="create-form" [formGroup]="baseForm.modelForm" (ngSubmit)="onSubmit($event)">
+  <mat-form-field class="field-full">
+    <mat-label>Name</mat-label>
+    <input matInput formControlName="name"/>
+    @if(baseForm.isValidField('name')) {
+      <mat-error>This field is invalid</mat-error>
+    }
+  </mat-form-field>
+
+  <div class="group-button">
+    @if(isEditContext) {
+      <button (click)="onRemove()" mat-flat-button type="button" color="warn">Remove</button>
+    }
+
+    <button (click)="onReset()" mat-stroked-button type="button" class="">Cancel</button>
+    <button mat-flat-button type="submit" color="primary"  [disabled]="!baseForm.modelForm.valid">
+      @if(isEditContext) {
+        Edit
+      } @else {
+        Create
+      }
+    </button>
+
+  </div>
+</form>
